--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ cache:
 
 jobs:
   include:
+    - stage: Lint
+      script: yarn lint
     - stage: Test
       script: yarn test
     - stage: Build
